# FM-Fusion-for-study-korean-translate

./: .gitignore  .gitmodules  CMakeLists.txt  DATA.md  MultiAgent.md  README.md  TestReg.md
catkin_ws/src/sgloop_ros/: CMakeLists.txt  package.xml
catkin_ws/src/sgloop_ros/include/: SlidingWindow.h  Visualization.h
catkin_ws/src/sgloop_ros/include/communication/: Communication.h
catkin_ws/src/sgloop_ros/include/registration/: Prune.h  robustPoseAvg.h
catkin_ws/src/sgloop_ros/include/utility/: CameraPoseVisualization.h
catkin_ws/src/sgloop_ros/launch/: looper.rviz  mapping.rviz  online_loop.launch  pose_graph.launch  render_3rscan.launch  render_3rscan_aligned.launch  render_hydra_lcd.launch  render_our_sgslam.launch  render_scannet.launch  render_semantic_map.launch  semantic_mapping.launch  slabim_mapping.launch  testloop.launch  visualize.launch
catkin_ws/src/sgloop_ros/msg/: CoarseGraph.msg  DenseGraph.msg
catkin_ws/src/sgloop_ros/src/: MappingNode.cpp  OfflineLoopNode.cpp  OnlineLoopNode.cpp  PoseGraphNode.cpp  RenderNode.cpp  Visualization.cpp
catkin_ws/src/sgloop_ros/src/communication/: Communication.cpp
catkin_ws/src/sgloop_ros/src/registration/: Prune.cpp  robustPoseAvg.cpp
catkin_ws/src/sgloop_ros/src/utility/: CameraPoseVisualization.cpp
cmake/: glog.cmake  gtsam.cmake  jsoncpp.cmake  open3d.cmake
config/: fusion_portable.yaml  matterport.yaml  realsense.yaml  render_3rscan.yaml  rio.yaml  scannet.yaml  slabim.yaml
cpp/: CMakeLists.txt  Color.h  Common.h  Detection.cpp  Detection.h  GraphMatch.cpp  Instance.cpp  Instance.h  IntegrateInstanceMap.cpp  IntegrateRGBD.cpp  MapMerger.cpp  SceneGraph.cpp  SceneGraph.h  Test3RscanRegister.cpp  TestHydra.cpp  TestLoop.cpp  TestRegister.cpp  Utility.cpp  Utility.h  robustPoseAvg.cpp  testTwoAgentsPGO.cpp
cpp/cluster/: PoseGraph.cpp  PoseGraph.h
cpp/mapping/: Detection.cpp  Edge.cpp  Edge.h  Instance.cpp  Instance.h  SemanticMapping.cpp  SemanticMapping.h
cpp/sgloop/: BertBow.cpp  BertBow.h  Graph.cpp  Graph.h  Initialization.h  LoopDetector.cpp  LoopDetector.h  SGNet.cpp  SGNet.h  ShapeEncoder.cpp  ShapeEncoder.h
cpp/tokenizer/: CMakeLists.txt  bert_tokenizer.h  text_tokenizer.cc
cpp/tools/: Color.h  Eval.h  IO.cpp  IO.h  TicToc.h  Tools.h  Utility.cpp  Utility.h  Visualization.cpp  g3reg_api.h
dataset/: convert_mask_masks.py
dataset/kimera/: collect_scan_folders.py  gsam_mapping.csv  maskrcnn_mapping.csv  prepare_semantic_images.py
dataset/scannetv2/: convert_mask_masks.py  generate_gt_association.py  sync_files.py  util.py  viz_match_results.py
doc/: DATA.md
eval/: coarse_registeration.txt  dense_registration.txt  log.txt  loop_closure.txt  online_loop.txt  round1.txt  round2.txt  round3_val.txt  round3_val_clean.txt  round4.txt  round5.txt  round6.txt  round7.txt  round8.txt  v2_coarse.txt  v2_dense.txt  v3+.txt
measurement_model/: Label_liklihood.md  bayesian_model.txt  categories.json  detection_histogram.txt  gpt_association.txt
measurement_model/bayesian/: label_names.json  likelihood.npy  prompt_likelihood.npy
measurement_model/hardcode/: label_names.json  likelihood.npy
measurement_model/maskrcnn/: label_names.json  likelihood.npy
measurement_model/prompt/: prompt_likelihood.npy
python/: analysis.py  draw_object_detection.py  export.py  fuse_detection.py  measure_model.py  postfuse.py  prepare_data_inst.py  project_util.py  scannet_util.py  semantic_mapping.py  visualze_map.py
scripts/: IO.py  analysis.py  bandwidth.py  dense_mapping.py  eval_loop.py  eval_trajectory.py  export.py  fuse_detection.py  hybrid_reg.py  hydra_benchmark.py  measure_model.py  postfuse.py  prepare_3rscan.py  prepare_custom.py  prepare_data_inst.py  prepare_datasets.py  prepare_lidar_cam.py  process_slabim_pcd.py  project_util.py  register_3rscan.py  registration_anaysis.py  render_result.py  run_eval_loop.py  run_graph_match.py  run_instance_integration.py  run_pose_average.py  run_test_loop.py  run_test_register.py  run_test_register_bm.py  scannet_util.py  scene_segment.py  semantic_mapping.py  test_register.sh  test_ver0_register.py  timing.py  uncompress_data.py  visualize.py
scripts/output/: association_matrix.npy  likelihood.npy  nyu40.txt
scripts/refine_output/: likelihood.npy
scripts/temporal_output/: kimera_probability.npy  likelihood.npy  prompt_likelihood.npy
src/: CMakeLists.txt  Common.h  GraphMatch.cpp  IntegrateInstanceMap.cpp  IntegrateRGBD.cpp  MapMerger.cpp  Test3RscanRegister.cpp  TestLoop.cpp
src/cluster/: PoseGraph.cpp  PoseGraph.h
src/mapping/: BayesianLabel.h  Detection.cpp  Detection.h  Instance.cpp  Instance.h  SemanticDict.h  SemanticMapping.cpp  SemanticMapping.h  SubVolume.cpp  SubVolume.h
src/sgloop/: BertBow.cpp  BertBow.h  Graph.cpp  Graph.h  Initialization.h  SGNet.cpp  SGNet.h  ShapeEncoder.cpp  ShapeEncoder.h
src/tokenizer/: basic_string_util.h  bert_tokenizer.cc  bert_tokenizer.h  logging.h  text_tokenizer.cc  text_tokenizer.h
src/tools/: IO.cpp  IO.h  TicToc.h  Tools.h  Utility.cpp  Utility.h  g3reg_api.h
